--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "fastclick": "^1.0.6",
+    "mitt": "^2.1.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.6",
+    "vue3-lazy": "^1.0.0-alpha.1",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "postcss-px-to-viewport": "^1.1.1"
   }
 }
